syntax = "proto3";

option csharp_namespace = "ITI.gRPC.Client.Protos";
service ProductService {
	rpc GetProduct(ProductId) returns (ResponseState);
	rpc AddProduct(Product) returns(Product);
	rpc UpdateProduct(Product)returns(Product);
}

message ProductId{
	int32 value=1;
}
message ResponseState{
	bool exist=1;
}
message Product{
	int32 id=1;
	string name=2;
	double price=3;
	int32 quantity=4;
}